키보드 마우스 세트 구입

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   <!-- Jquery -->
   <script src="http://code.jquery.com/jquery.min.js"></script>
+  <!-- TOCPlugin -->
+  <script src="/js/toc.js"></script>
 </head>
