--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,9 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
-
+  <script>
+	  $('.post-content').toc({
+	      showAlways:true
+	  });
+  </script>
 </div>
