태그 리스트 구현

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,9 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">홈</a>
+    <a class="site-title" href="/tag/list">태그</a>
+
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -13,10 +15,7 @@
         </svg>
       </a>
 
-      <!-- FIXME : 차후에 이 곳에 태그 리스트, 홈으로, 전체 글 리스트가 들어갈 것 -->
-      <div class="trigger">
-        
-      </div>
+
     </nav>
 
   </div>
