--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
-        {% include comments.html %}
+        <!-- {% include comments.html %} -->
       </div>
     </div>
     {% include footer.html %}
