--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,7 @@
   <script src="http://code.jquery.com/jquery.min.js"></script>
   <!-- TOCPlugin -->
   <script src="/js/toc.js"></script>
+
+  <!-- disqus count -->
+  <script id="dsq-count-scr" src="//astrod.disqus.com/count.js" async></script>
 </head>
