--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -9,7 +9,7 @@
       var disqus_config = function () {
             debugger;
       this.page.url = "{{site.url}}" + "{{page.url}}"; // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = "{{ page.date }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
       this.page.title = "{{ page.title }}"
       };
       
