--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
   <script src="http://code.jquery.com/jquery.min.js"></script>
   <!-- TOCPlugin -->
   <script src="/js/toc.js"></script>
-
+  <!--mermaid -->
+  <script src="https://cdn.rawgit.com/knsv/mermaid/7.0.0/dist/mermaid.min.js"></script>
 </head>
