--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ comments: true
 	  $('.post-content').toc({
 	      showAlways:true
 	  });
+  mermaid.initialize({startOnLoad:true});
   </script>
   {% include comments.html %}
 </div>
