--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <!--mermaid-->
+  <link rel="stylesheet" href="https://cdn.rawgit.com/knsv/mermaid7.0.0/dist/mermaid.css">
   <!-- Jquery -->
   <script src="http://code.jquery.com/jquery.min.js"></script>
   <!-- TOCPlugin -->
