--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,5 @@
   <script src="/js/toc.js"></script>
   <!--mermaid -->
   <script src="https://cdn.rawgit.com/knsv/mermaid/7.0.0/dist/mermaid.min.js"></script>
+  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 </head>
