not displayed mathjar and mermaid fix.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,10 @@
         easing: 'easeInOutCubic', // Easing pattern to use
         offset: 20, // Integer. How far to offset the scrolling anchor location in pixels
       });
-    </script>
-    <!-- <script src="{{ " /js/scroll.min.js " | prepend: site.baseurl }}" charset="utf-8"></script> -->
+</script>
+    <!--MathJax-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML" charset="utf-8"></script>
+    <!--mermaid.js-->
+    <script src="https://unpkg.com/mermaid@7.1.0/dist/mermaid.min.js" charset="utf-8"></script>
   </body>
-
 </html>
