--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -102,10 +102,4 @@ layout: default
 <!--mermaid.js-->
 <script src="https://unpkg.com/mermaid@7.1.0/dist/mermaid.min.js" charset="utf-8"></script>
 <!--MathJax-->
-<!--change inline config-->
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
-});
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML" charset="utf-8"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML" charset="utf-8"></script> -->
