change comments system

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -46,7 +46,7 @@
 <!--{% endif %}-->
 
 <script src="https://utteranc.es/client.js"
-        repo="https://github.com/astrod/astrod.github.com"
+        repo="astrod/astrod.github.com"
         issue-term="pathname"
         async>
 </script>
