--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -100,7 +100,7 @@ table {
     tbody {
         tr {
             &:nth-of-type(2n+1) {
-                background-color: #f8f8fd;
+                background-color: #fff;
             }
             &:nth-of-type(2n) {
                 background-color: #e5eaed;
