--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -123,6 +123,9 @@
                 font-size: 16px;
                 font-weight: bold;
             }
+            >section {
+                border-bottom: 1px solid #c0c0c0;
+            }
             a {
                 color: #4d6dad;
                 transition: 0.5s ease;
@@ -140,6 +143,11 @@
                 padding-left: 20px;
             }
         }
+    }
+    .border-hr {
+        border: 0;
+        height: 3px;
+        background: #ccc
     }
 }
 @media screen and (max-width:1200px) and (min-width: 770px) {
